--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ body {
 
         name.value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
         username.value = tg.initDataUnsafe.user.username;
-        print(tg.initDataUnsafe.user.photo_url);
+        console.log(tg.initDataUnsafe.user.photo_url);
         tg.expand();
     }
       
