--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ body {
 <div class="container">
 	<div class="row">
 		<div class="col-md-4">
-    <div class="profile-card-2"><img src="https://i.postimg.cc/QNbNrJcZ/photo-2024-10-04-18-03-05.jpg" class="img img-responsive">
+    <div class="profile-card-2"><img src="https://i.postimg.cc/QNbNrJcZ/photo-2024-10-04-18-03-05.jpg" id="profile-img" class="img img-responsive">
         <input class="profile-name" id="profile-name" value="ИМЯ ФАМИЛИЯ" readonly>
         <input class="profile-username" id="profile-username" value="@Test" readonly>
         <div class="profile-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
@@ -561,6 +561,7 @@ body {
             let tg = window.Telegram.WebApp;
             let name = document.getElementById("profile-name");
             let username = document.getElementById("profile-username");
+            let img = document.getElementById("profile-img");
             tg.expand();
 
             window.setInterval(prize, 3000);
@@ -568,7 +569,8 @@ body {
             async function prize(){
               name.value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
               username.value = "@" + tg.initDataUnsafe.user.username;
-              console.log(tg.initDataUnsafe.user.photo_url);
+              img.src = tg.initDataUnsafe.user.photo_url;
+              // console.log(tg.initDataUnsafe.user.photo_url);
             }
         </script>
         <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
