--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@ body {
 	<div class="row">
 		<div class="col-md-4">
     <div class="profile-card-2"><img src="https://i.postimg.cc/QNbNrJcZ/photo-2024-10-04-18-03-05.jpg" id="profile-img" class="img img-responsive">
-        <input class="profile-name" id="profile-name" value="ИМЯ ФАМИЛИЯ" readonly>
-        <input class="profile-username" id="profile-username" value="@Test" readonly>
+        <div class="profile-name" id="profile-name">MAX SIDOROV</div>
+        <div class="profile-username" id="profile-username">@TEST</div>
         <div class="profile-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
     </div>
     <div class="grid align__item">
@@ -567,8 +567,8 @@ body {
             window.setInterval(prize, 3000);
 
             async function prize(){
-              name.value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
-              username.value = "@" + tg.initDataUnsafe.user.username;
+              name = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
+              username = "@" + tg.initDataUnsafe.user.username;
             }
         </script>
         <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
