--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ body {
   width: 100%;
   max-height: 7%;
   min-height: 7%;
-  background: transparent;
+  background: white;
 }
 </style>
 <style>
@@ -501,7 +501,7 @@ body {
 .menu {
   position: fixed;
   bottom: 3%;
-  left: 48%;
+  left: 45%;
   padding: 30px;
   background: #e8e8f3;
   border-radius: 100%;
@@ -833,7 +833,7 @@ body {
         let username = document.getElementById("profile-username");
 
         name.innerHTML = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
-        username.innerHTML = tg.initDataUnsafe.user.username;
+        username.innerHTML = "@" + tg.initDataUnsafe.user.username;
         tg.expand();
     }
       
