--- a/index.html
+++ b/index.html
@@ -487,8 +487,7 @@ body {
   transition: .3s all;
 
   width: 100%;
-  max-height: 7%;
-  min-height: 7%;
+  height: 60px;
   background: white;
 }
 </style>
@@ -581,7 +580,7 @@ body {
 }
     </style>
 <header class="header">
-    <div id="ton-connect" style="position: absolute; top: 25%; right: 2%; display:inline;">
+    <div id="ton-connect" style="position: absolute; top: 25%; right: 3%; display:inline; transform: scale(0.8);">
 </header>
 
 <div class="container">
