--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ body {
   transition: .3s all;
 
   width: 100%;
-  height: 60px;
+  height: 50px;
   background: white;
 }
 </style>
@@ -580,7 +580,7 @@ body {
 }
     </style>
 <header class="header">
-    <div id="ton-connect" style="position: absolute; top: 25%; right: 3%; display:inline; transform: scale(0.8);">
+    <div id="ton-connect" style="position: absolute; top: 15%; right: 3%; display:inline; transform: scale(0.8);">
 </header>
 
 <div class="container">
@@ -653,7 +653,7 @@ body {
         <script src="https://unpkg.com/@tonconnect/sdk@0.0.34/dist/tonconnect-sdk.min.js"></script>
         <script>
         window.setInterval(data, 3000);
-        // window.setInterval(rrr, 1000);
+        window.setInterval(rrr, 3000);
         window.setInterval(prize, 3000);
         window.onload = function() {setTimeout(pp, 3000)};
         window.onload = function(){
