--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@ body {
 
   left: 50%;
   border-radius: 0px 0px 12px 12px;
+  box-shadow: 0px 10px 30px 10px rgba(0, 0, 0, 0.3);
   transform: translateX(-50%);
   transition: .3s all;
 
