--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ body {
   <div id="ton-connect" style="position: absolute; top: 15%; right: 3%; display:inline; transform: scale(0.8);">
 </header>
 
-<div id="main" style="transform: scale(0.8)">
+<div id="main" style="transform: scale(0.7)">
  <div class="container">
 	<div class="row">
 		<div class="col-md-4"></div>
@@ -663,7 +663,7 @@ body {
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
             let tg = window.Telegram.WebApp;
-            tg.setHeadercolor("#FFFFFF");
+            tg.setHeaderColor("#FFFFFF");
             tg.expand();
         </script>
         <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
