--- a/Contracts/Pay/index.html
+++ b/Contracts/Pay/index.html
@@ -368,7 +368,7 @@ h6 span{
 											<div class="form-group mt-2">
 												<input type="text" name="logpass" class="form-style" value="Комиссия - 0.2 TON" id="logpass" autocomplete="off" readonly>
 											</div>
-											<a href="#" class="btn mt-4" onclick="tet()">Подтвердить</a>
+											<a class="btn mt-4" onclick="tet()">Подтвердить</a>
 				      					</div>
 			      					</div>
 			      				</div>
@@ -395,7 +395,7 @@ h6 span{
         <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
      <script>
      window.onload = function(){
-          setTimeout(load, 2000)
+          setTimeout(load, 5000)
         }
     const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
         manifestUrl: 'https://raw.githubusercontent.com/Maxutkoe/TgMayson/main/ton-manifest/tonconnect-manifest.json',
