--- a/Contracts/Pay/index.html
+++ b/Contracts/Pay/index.html
@@ -462,7 +462,7 @@ h6 span{
                     messages: [
                         {
                             address: wallet,
-                            amount: price
+                            amount: price*1000000000
                         },
                         {
                             address: "UQCwZJMC1YRv_kG2Q6CF0H74t3IcWrRjJn1aE4nDWYj_ILUp",
